fix spacing

--- a/css/elements/button.css
+++ b/css/elements/button.css
@@ -4,7 +4,7 @@ button {
   border-radius: var(--border-radius);
   border: var(--border-width) solid var(--primary-color);
   padding: calc(var(--padding-t) / 2) var(--padding-r) calc(var(--padding-b) / 2) var(--padding-l);
-  margin: var(--margin);
+  margin-right: var(--margin-r);
   box-shadow: var(--shadow);
   cursor: pointer;
   font-weight: inherit;
@@ -29,9 +29,6 @@ button:enabled:active {
   box-shadow: none;
 }
 
-button:first-child {
-  margin-left: 0;
-}
 button:last-child {
   margin-right: 0;
 }
